elfk/filebeat/tomcat-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
  namespace: default
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: tomcat
        image: tomcat:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: logdata
          mountPath: /usr/local/tomcat/logs
      - name: filebeat
        image: docker.elastic.co/beats/filebeat-oss:7.6.2
        args: [
          "-c", "/etc/filebeat/filebeat.yml",
          "-e",
        ]
        securityContext:
          runAsUser: 0
        resources:
          limits:
            memory: 200Mi
          requests:
            cpu: 200m
            memory: 200Mi
        volumeMounts:
        - name: config
          mountPath: /etc/filebeat/
        - name: data
          mountPath: /usr/share/filebeat/data
        - name: logdata
          mountPath: /logdata
      volumes:
      - name: data
        emptyDir: {}
      - name: logdata
        emptyDir: {}
      - name: config
        configMap:
          name: filebeat-config-tomcat
          items:
          - key: filebeat.yml
            path: filebeat.yml
