elfk/filebeat/nginx-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  namespace: default
spec:
  rules:
    - host: nginx.lzxlinux.com
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx
              servicePort: 80
