elfk/filebeat/tomcat-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tomcat
  namespace: default
spec:
  rules:
    - host: tomcat.lzxlinux.com
      http:
        paths:
          - path: /
            backend:
              serviceName: tomcat
              servicePort: 8080
